# jmserver

./: .drone.yml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  schema.sql
spec/: v1.json  v2.json
src/: config.rs  error.rs  main.rs  models.rs  sql.rs
src/cdn/: error.rs  mod.rs  sql.rs  templates.rs
src/ipfs/: error.rs  mod.rs
src/lib/: error.rs  ipheader.rs  mod.rs
src/matrix/: mod.rs
src/v1/: error.rs  mod.rs  models.rs  routes.rs  sql.rs
src/v2/: mod.rs  models.rs  routes.rs
templates/: dir.html
testenv/: README.md  debug_run.sh  docker-compose.yml
testenv/mariadb_init/: 01-schema.sql  02-example_data.sql
